# raybible-cpp

./: .gitignore  CMakeLists.txt  app_state.cpp  app_state.h  bible_data.cpp  bible_logic.cpp  bible_logic.h  build.sh  design.md  game  history.txt  main.cpp  managers.cpp  managers.h  raybible.h  settings.txt  study_data.txt  ui_renderer.cpp  ui_renderer.h  utils.cpp  utils.h
cache/bbe/jhn/: 1.json
cache/kjv/exo/: 25.json  26.json  27.json  28.json  29.json
cache/kjv/ezk/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
cache/kjv/jer/: 52.json
cache/kjv/jhn/: 1.json  2.json  3.json  4.json
cache/kjv/lam/: 1.json  2.json  3.json  4.json  5.json
cache/kjv/lev/: 20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json
cache/kjv/luk/: 11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json
cache/kjv/mrk/: 10.json  11.json  12.json  13.json  14.json  15.json  6.json  7.json  8.json  9.json
cache/kjv/num/: 1.json  2.json  5.json
cache/kjv/rev/: 1.json
cache/web/1ch/: 1.json  2.json  3.json
cache/web/1ki/: 1.json  2.json
cache/web/1sa/: 1.json  2.json
cache/web/2ki/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
cache/web/2sa/: 1.json  2.json
cache/web/act/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
(+413 files in other folders)
